<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PocketSnap</string>
    <string name="action_settings">设置</string>
    <string name="save_settings">保存</string>
    <string name="action_refresh">获取最新Snap</string>
    <string name="logo">图标</string>


    <!-- 主菜单 -->
    <string-array name="menu_array">
        <item>PocketSnap</item>
        <item>随手拍</item>
        <item>收藏</item>
        <item>个人</item>
        <item>设置</item>
    </string-array>
    
    <!-- 图片来源选择 -->
    <string-array name="photo_array">  
        <item>相册</item>  
        <item>相机</item>  
        <item>取消</item>  
    </string-array>  

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- 注册和登录 -->
    <string name="appName">PocketSnap</string>
    <string name="username_input">请输入您的用户名</string>
    <string name="password_input">请输入您的密码</string>
    <string name="email_input">请输入您的邮箱</string>
    <string name="phone_input">请输入您的手机号</string>
    <string name="login">登录</string>
    <string name="register">注册账号</string>
    <string name="WeChat">微信登录</string>
    <string name="WeiBo">微博登录</string>
    <string name="QQ">QQ登录</string>
    <string name="username_label">用户名</string>
    <string name="password_label">&#160;密&#160;&#160;&#160;码</string>
    <string name="email_label">邮&#160;&#160;&#160;箱</string>
    <string name="phone_label">手机号</string>
    <string name="register_bt">确认并注册</string>
    
    <!-- 随手拍 -->
    <string name="title_input">请输入标题(不超过10个字)</string>
    <string name="content_input">请输入内容(不超过50个字)</string>
    
    
    <!-- 个人信息 -->
    <string name="my_essays_label">我的作品</string>
    <string name="my_comments_label">我的评论</string>
    <string name="my_collection_label">我的收藏</string>
    <string name="its_essays_label">Ta的作品</string>
    <string name="its_comments_label">Ta的评论</string>
    <string name="focus_label">关注</string>
    <string name="fan_label">粉丝</string>
    <string name="nickname_label">昵称</string>
    <string name="gender_label">性别</string>
    <string name="position_label">地区</string>
    <string name="introduction_label">个人简介</string>
    <string name="realname_label">真实姓名</string>
    <string name="selfie_label">修改头像</string>
    
    
    <!-- 常用按键 -->
    <string name="launch_bt">发布</string>
    <string name="submit_bt">提交</string>
    <string name="confirm_bt">确定</string>
    <string name="goback_bt">返回</string>
    
    <!-- 文章操作 -->
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="likes">点赞数</string>
    <string name="comments">评论数</string>
    
    
    <!-- setting -->
    <string name="WIFI_mode">WIFI下加载图片</string>
    <string name="night_mode">夜间模式</string>
    <string name="remark">给我们评分</string>
    <string name="shareApp">推荐给好友</string>
    <string name="suggestion">意见反馈</string>
    <string name="clear_mem">清除缓存</string>
    <string name="exit_bt">退出登录</string>
    
</resources>
