<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:background="#fffbf0" 
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:orientation="vertical" >  

     
    <LinearLayout style="@style/wrap_layout" >
        <!-- 上圆角-->
        <LinearLayout android:id="@+id/WIFI_mode" style="@style/top_layout">
            <TextView style="@style/usertext" android:text="@string/WIFI_mode" />
          	<Switch
          	    android:id="@+id/load_mode_switch"
          	    android:layout_width="wrap_content"
          	    android:layout_height="wrap_content" />
        </LinearLayout>
        
        <View style="@style/bg_line"/>
         
       <!-- 下圆角-->
       <LinearLayout android:id="@+id/night_mode" style="@style/bottom_layout">
            <TextView style="@style/usertext" android:text="@string/night_mode" />
          	<Switch
          	    android:id="@+id/night_mode_switch"
          	    android:layout_width="wrap_content"
          	    android:layout_height="wrap_content" />
        </LinearLayout>
             
    </LinearLayout>
    
    <LinearLayout style="@style/wrap_layout">
    	<LinearLayout android:id="@+id/remark" style="@style/top_layout">
        	<TextView style="@style/usertext" android:text="@string/remark" />
          	<ImageView style="@style/img_arrow"/>
    	</LinearLayout>
   		<View style="@style/bg_line"/>
       
    	<LinearLayout android:id="@+id/shareApp" style="@style/mid_layout">
        	<TextView style="@style/usertext" android:text="@string/shareApp" />
          	<ImageView style="@style/img_arrow"/>
    	</LinearLayout>
    	<View style="@style/bg_line"/>
 
    	<LinearLayout android:id="@+id/suggestion" style="@style/bottom_layout">
        	<TextView style="@style/usertext" android:text="@string/suggestion" />
          	<ImageView style="@style/img_arrow"/>
    	</LinearLayout>
    </LinearLayout>
             
    <LinearLayout style="@style/wrap_layout">
        <LinearLayout android:id="@+id/clear_mem" style="@style/single_layout">
            <TextView style="@style/usertext" android:text="@string/clear_mem"/>

            <TextView
                android:id="@+id/used_mem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.5M" />

            <ImageView style="@style/img_arrow"/>

        </LinearLayout>
        
    </LinearLayout>
    
    <Button
        android:id="@+id/exit"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_red"
        android:text="@string/exit_bt"
        android:textColor="@color/white" />
  
</LinearLayout>