<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:background="#fffbf0"
android:layout_width="match_parent"
android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/wrap_layout">
    	<LinearLayout android:id="@+id/selfie" style="@style/top_layout">
        	<TextView style="@style/usertext" android:text="@string/selfie_label" />

        	<ImageView
        	    android:id="@+id/selfie_iv"
        	    android:layout_width="30dp"
        	    android:layout_height="30dp"
        	    android:layout_marginRight="20dp"
        	    android:src="@drawable/neu" />

          	<ImageView style="@style/img_arrow"/>

    	</LinearLayout>
   		<View style="@style/bg_line"/>
 
    	<LinearLayout android:id="@+id/nickname" style="@style/bottom_layout">
        	<TextView style="@style/usertext" android:text="@string/nickname_label" />

        	<TextView
        	    android:id="@+id/nickname_tv"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_marginRight="20dp"
        	    />

          	<ImageView style="@style/img_arrow"/>
    	</LinearLayout>
    </LinearLayout>
    
    <LinearLayout style="@style/wrap_layout">  
    	<LinearLayout android:id="@+id/gender" style="@style/top_layout">
        	<TextView style="@style/usertext" android:text="@string/gender_label" />

        	<TextView
        	    android:id="@+id/gender_tv"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_marginRight="20dp"
        	    />

          	<ImageView style="@style/img_arrow"/>
    	</LinearLayout>
    	<View style="@style/bg_line"/>
    	
    	<LinearLayout android:id="@+id/position" style="@style/mid_layout">
        	<TextView style="@style/usertext" android:text="@string/position_label" />

        	<TextView
        	    android:id="@+id/position_tv"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_marginRight="20dp"
        	    />

          	<ImageView style="@style/img_arrow"/>
    	</LinearLayout>
    	<View style="@style/bg_line"/>
 
    	<LinearLayout android:id="@+id/introduction" style="@style/bottom_layout">
        	<TextView style="@style/usertext" android:text="@string/introduction_label" />

        	<TextView
        	    android:id="@+id/introduction_tv"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_marginRight="20dp"
        	    />

          	<ImageView style="@style/img_arrow"/>
    	</LinearLayout>
    </LinearLayout>
    
    <LinearLayout style="@style/wrap_layout">
    	<LinearLayout android:id="@+id/realname" style="@style/top_layout">
        	<TextView style="@style/usertext" android:text="@string/realname_label" />

        	<TextView
        	    android:id="@+id/realname_tv"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_marginRight="20dp"
        	    />

          	<ImageView style="@style/img_arrow"/>
    	</LinearLayout>
   		<View style="@style/bg_line"/>
       
    	<LinearLayout android:id="@+id/email" style="@style/mid_layout">
        	<TextView style="@style/usertext" android:text="@string/email_label" />

        	<TextView
        	    android:id="@+id/email_tv2"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_marginRight="20dp"
        	    />

    	</LinearLayout>
    	<View style="@style/bg_line"/>
 
    	<LinearLayout android:id="@+id/phone" style="@style/bottom_layout">
        	<TextView style="@style/usertext" android:text="@string/phone_label" />

        	<TextView
        	    android:id="@+id/phone_tv2"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_marginRight="20dp"
        	    />

    	</LinearLayout>
    </LinearLayout>
    
</LinearLayout>

</ScrollView>