<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:background="#fffbf0"
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/title_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            />

        <EditText
            android:id="@+id/essay_title"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="10"
            android:hint="@string/title_input" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:id="@+id/content_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            />

        <EditText
            android:id="@+id/essay_content"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="50"
            android:hint="@string/content_input" />

    </LinearLayout>

    <ImageView
        android:id="@+id/essay_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/add_char" />

    <Switch
        android:id="@+id/orinal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="上传原图" />

    <Button
        android:id="@+id/launch_bt"        
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape2"
        android:text="@string/launch_bt" />
  
</LinearLayout>