<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#fffbf0"
    android:orientation="vertical" >

    
    	<TextView
    	    android:id="@+id/appName_tv"
    	    android:layout_width="180dp"
    	    android:layout_height="130dp"
    	    android:text="@string/appName"
    	    android:textColor="@color/red"
    	    android:background="@drawable/logo"
    	    android:layout_marginBottom="20dp"
    	    android:gravity="center|bottom"
    	    android:textSize="20sp" />
  
        <EditText
            android:id="@+id/username_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:layout_marginBottom="10dp"
            android:hint="@string/username_input" />
        
        <EditText
            android:id="@+id/password_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_input"
            android:maxLength="20"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword" />
        
        <Button
            android:id="@+id/login_bt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape2"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="20dp"
            android:text="@string/login" />
        
        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/wechat_ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/WeChat_iv"
                    android:contentDescription="@string/WeChat"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/wechat_logo" />

                <TextView
                    android:id="@+id/WeChat_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WeChat" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/weibo_ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/WeiBo_iv"
                    android:contentDescription="@string/WeiBo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/weibo_logo" />

                <TextView
                    android:id="@+id/WeiBo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WeiBo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/qq_ll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/QQ_iv"
                    android:contentDescription="@string/QQ"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/qq_logo" />

                <TextView
                    android:id="@+id/QQ_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/QQ" />

            </LinearLayout>

        </LinearLayout>

</LinearLayout>